@@ -1,1 +1,2 @@
 export { useIsDesktop as useIsDesktopHook } from './src/useIsDesktopHook.jsx';
+export { UseResizeObserver as UseResizeObserverHook } from './src/useResizeObserverHook.jsx';
