@@ -17,3 +17,6 @@
 2023-11-15T11:55:25.156Z |            1.9.4 | upd
 2023-11-15T13:13:33.114Z |            1.9.5 | fix
 2023-12-14T14:30:29.657Z |           1.10.0 | Date to local ISO
+2024-02-18T11:51:24.158Z |           1.11.0 | Boilerplate
+2024-02-18T13:03:58.200Z |           1.11.1 | fix
+2024-02-20T15:53:28.808Z |           1.12.0 | UseResizeObserverHook
